added spell validator to form and connected to sql query to add spell

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -23,9 +23,17 @@
       <input type="number" name="damage" required />
       <label for="range">Range:</label>
       <select name="range" required>
-        <option value="close">Close</option>
-        <option value="medium">Medium</option>
-        <option value="long">Long</option>
+        <option value="Close">Close</option>
+        <option value="Medium">Medium</option>
+        <option value="Long">Long</option>
+      </select>
+      <label for="element">Element:</label>
+      <select name="element" required>
+        <option value="Fire">Fire</option>
+        <option value="Water">Water</option>
+        <option value="Earth">Earth</option>
+        <option value="Wind">Wind</option>
+        <option value="Arcane">Arcane</option>
       </select>
       <button type="submit">Add</button>
     </form>
