--- a/views/new.ejs
+++ b/views/new.ejs
@@ -10,7 +10,7 @@
   <body>
     <h1>Mage Spellbook</h1>
     <h2>New Spell</h2>
-    <form action="/new" method="POST">
+    <form action="/spells/new" method="POST">
       <label for="name">Spell Name:</label>
       <input type="text" name="name" required />
       <label for="description">Description</label>
