--- a/views/updateSpell.ejs
+++ b/views/updateSpell.ejs
@@ -10,7 +10,7 @@
   <body>
     <h1>Mage Spellbook</h1>
     <h2>Update Spell</h2>
-    <form action="/spells/<%= spell_id %>/update" method="POST">
+    <form action="/spells/<%= spell.id %>/update" method="POST">
       <label for="name">Spell Name:</label>
       <input type="text" name="name" value="<%= spell.name %>" required />
       <label for="description">Description</label>
