create delete db in controller and  route

--- a/views/spellShow.ejs
+++ b/views/spellShow.ejs
@@ -17,5 +17,8 @@
     <p><%= spell.damage %></p>
     <p><%= spell.range %></p>
     <p><%= spell.element %></p>
+
+    <a href="/spells/<%= spell.id %>/update">Update</a>
+    <a href="/spells/<%= spell.id %>/delete">Delete</a>
   </body>
 </html>
