debugged delete spell, works now

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1>Mage Spellbook</h1>
+    <%- include("partials/errors.ejs") %>
     <h2>New Spell</h2>
     <form action="/spells/new" method="POST">
       <label for="name">Spell Name:</label>
