create validateElement validator, created showaddelement and addelement functions

--- a/views/elements.ejs
+++ b/views/elements.ejs
@@ -13,5 +13,7 @@
         <h2><%= element.name %></h2>
         <p><%= element.description %></p>
     <% }) %>
+
+    <a href="/elements/add">Add Element</a>
   </body>
 </html>
