--- a/views/spellByElementShow.ejs
+++ b/views/spellByElementShow.ejs
@@ -19,5 +19,13 @@
         <p><%= spell.damage %></p>
         <p><%= spell.range %></p>
     <% }) %>
+    <a href="/elements/<%= element.id %>/update">Update Element</a>
+    <form
+      action="/elements/<%= element.id %>/delete"
+      onsubmit="return confirm('Are you sure you want to delete this spell?');"
+      method="POST"
+    >
+      <button type="submit">Delete Element</button>
+    </form>
   </body>
 </html>
