--- a/views/spellByElementShow.ejs
+++ b/views/spellByElementShow.ejs
@@ -20,7 +20,7 @@
         <p><%= spell.damage %></p>
         <p><%= spell.range %></p>
     <% }) %>
-    <a href="/elements/<%= element.id %>/update">Update Element</a>
+    <a href="/elements/<%= element.name %>/update">Update Element</a>
     <form
       action="/elements/<%= element.name %>/delete"
       onsubmit="return confirm('Are you sure you want to delete this spell?');"
