fixed updateElement function, made sure it get validated

--- a/views/updateElement.ejs
+++ b/views/updateElement.ejs
@@ -16,8 +16,8 @@
       <input type="text" name="name" value="<%= element.name %>" required />
       <label for="description">Description</label>
       <textarea rows="4" name="description" required>
-        <%= element.description %>
-      </textarea>
+<%= element.description %></textarea
+      >
       <button type="submit">Add</button>
     </form>
   </body>
