created header and footer partials

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="page">
+      <%- include("partials/header.ejs") %>
       <main class="main">
         <section class="hero">
           <p class="hero-text">
@@ -28,6 +29,7 @@
           </div>
         </section>
       </main>
+      <%- include("partials/footer.ejs") %>
     </div>
   </body>
 </html>
