added source code to footer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,8 @@
 <footer class="footer">
-  <p class="footer-text">Mage Spellbook · Arcane Inventory Application</p>
+  <p class="footer-text">
+    Mage Spellbook ·
+    <a href="https://github.com/thongster/odin-inventory-application"
+      >Source Code</a
+    >
+  </p>
 </footer>
