--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,10 @@
 <header class="header">
   <div class="header-inner">
-    <img src="/icon.png" alt="Mage Spellbook Icon" class="logo" />
-    <h1 class="title">Mage Spellbook</h1>
+    <a href="/"
+      ><img src="/icon.png" alt="Mage Spellbook Icon" class="logo"
+    /></a>
+    <a href="/">
+      <h1 class="title">Mage Spellbook</h1>
+    </a>
   </div>
 </header>
